Implementing projects CRUD [WIP]